[gd_scene load_steps=3 format=3 uid="uid://bugepp7ityxgx"]

[ext_resource type="Script" uid="uid://0bsk03gjsmpv" path="res://main.gd" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://ng6j4mjp362o" path="res://shape_world.tscn" id="2_0xm2m"]

[node name="Main" type="Node"]
script = ExtResource("1_ig7tw")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_right = 1280.0
offset_bottom = 720.0

[node name="ShapeViewportContainer" type="SubViewportContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(360, 0)
layout_mode = 2
size_flags_horizontal = 3
stretch = true

[node name="ShapeViewport" type="SubViewport" parent="HBoxContainer/ShapeViewportContainer"]
handle_input_locally = false
size = Vector2i(638, 720)
render_target_update_mode = 4

[node name="ShapeWorld" parent="HBoxContainer/ShapeViewportContainer/ShapeViewport" instance=ExtResource("2_0xm2m")]

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/PanelContainer"]
layout_mode = 2

[node name="TaskDataGrid" type="GridContainer" parent="HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="SideLabel" type="Label" parent="HBoxContainer/PanelContainer/VBoxContainer/TaskDataGrid"]
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="SideSpinBox" type="SpinBox" parent="HBoxContainer/PanelContainer/VBoxContainer/TaskDataGrid"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
step = 0.1
editable = false

[node name="TaskAnswerGrid" type="GridContainer" parent="HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="AreaLabel" type="Label" parent="HBoxContainer/PanelContainer/VBoxContainer/TaskAnswerGrid"]
layout_mode = 2
text = "Area"

[node name="AreaSpinBox" type="SpinBox" parent="HBoxContainer/PanelContainer/VBoxContainer/TaskAnswerGrid"]
layout_mode = 2
size_flags_horizontal = 3
step = 0.01

[node name="VolumeLabel" type="Label" parent="HBoxContainer/PanelContainer/VBoxContainer/TaskAnswerGrid"]
layout_mode = 2
text = "Volume"

[node name="VolumeSpinBox" type="SpinBox" parent="HBoxContainer/PanelContainer/VBoxContainer/TaskAnswerGrid"]
layout_mode = 2
size_flags_horizontal = 3
step = 0.01

[node name="CheckAnswerButton" type="Button" parent="HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
text = "Check answer"

[node name="NewTaskButton" type="Button" parent="HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
text = "Get new task"

[connection signal="pressed" from="HBoxContainer/PanelContainer/VBoxContainer/CheckAnswerButton" to="." method="_on_check_answer_button_pressed"]
[connection signal="pressed" from="HBoxContainer/PanelContainer/VBoxContainer/NewTaskButton" to="." method="_on_button_pressed"]
